# discovery-ai-assistant

./: .gitignore  ARCHITECTURE.md  DEMO_SETUP.md  README.md  code.html  dashboard.html  discovery-v2.html  discovery.html  docker-compose.yml  documents.html  knowledge.html  qa.html  settings.html  story-tech.html  test-pr-sample.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_project_repos.py  003_notifications.py  004_project_integrations.py  005_slack_inbound.py  006_shared_conversation.py  007_finding_views.py  008_backfill_finding_views.py  009_finding_history.py  010_review_tokens.py  011_meeting_agendas.py  012_gap_resolution_type.py  013_req_acceptance_criteria.py  013_requirement_acceptance_criteria.py  014_drop_gap_resolution_type.py  015_gap_closure_fields.py  016_gap_assignee.py  017_proposed_updates.py  019_schema_drift_backfill.py  020_reminders.py  021_reminder_retries.py  022_reminder_recurrence.py  023_reminder_output_kind.py  025_contradiction_fields.py  026_contradiction_sources.py  027_taxonomy_cleanup.py  028_chat_sessions.py  029_constraint_fields.py  030_propose_from_extraction.py  031_restore_conversations.py  032_relationships_table.py  033_sessions_and_events.py  034_learnings_inbox.py  035_api_tokens.py  (+10 more)
backend/app/: config.py  deps.py  main.py
backend/static/: cli.sh  mcp_bridge.py
backend/tests/: check_hand_edits.py  check_lint.py  check_mcp_inserts.py  check_migrations.py  check_schemas.py  check_writer_parity.py  lint_vault.py
(+407 files in other folders)
