[project]
name = "discovery-ai-backend"
version = "0.1.0"
description = "Discovery AI Assistant — backend API and pipeline"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    # Redis / Queue
    "redis>=5.0.0",
    "arq>=0.26.0",
    # LLM
    "anthropic>=0.40.0",
    "instructor>=1.5.0",
    "pydantic-ai>=0.0.30",
    # HTTP client (for RAGFlow API)
    "httpx>=0.27.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    # Utils
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    # Slack
    "slack-bolt>=1.21.0",
    "slack-sdk>=3.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
